--- a/.gitignore
+++ b/.gitignore
@@ -15,22 +15,11 @@ robots.txt
 /MAINTAINERS.txt
 /UPGRADE.txt
 /README.txt
-sites/all/README.txt
-sites/all/modules/README.txt
-sites/all/themes/README.txt
-
-# Ignore everything but the "sites" folder ( for non core developer )
-.htaccess
-web.config
-authorize.php
-cron.php
-index.php
-install.php
-update.php
-xmlrpc.php
-/includes
-/misc
-/modules
-/profiles
-/scripts
-/themes
+.deps
+config
+/AUTHORS
+Makefile
+NEWS
+pipecolors.pc
+README
+test
