--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 pkgconfig_DATA = pipecolors.pc
-AM_CXXFLAGS = -std=c++11 -fPIC -pipe
-ACLOCAL_AMFLAGS = -I m4
-LIBTOOL_DEPS = @LIBTOOL_DEPS@
+
+AM_CXXFLAGS =+ -std=c++11 -fPIC -pipe
+ACLOCAL_AMFLAGS =+ -I m4
+LIBTOOL_DEPS += @LIBTOOL_DEPS@
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status libtool
 
