--- a/Makefile.am
+++ b/Makefile.am
@@ -1,19 +1,17 @@
 pkgconfig_DATA = pipecolors.pc
+VERSION = 0.1.0
+AM_CXXFLAGS =  -std=c++11
+ACLOCAL_AMFLAGS = -I m4 -I config
+LIBTOOL_DEPS = @LIBTOOL_DEPS@
 
-AM_CXXFLAGS += -std=c++11 -fPIC -pipe
-ACLOCAL_AMFLAGS = -I m4
-LIBTOOL_DEPS += @LIBTOOL_DEPS@
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status libtool
 
-pkginclude_HEADERS = pipecolors.h
-soinclude_HEADERS = pipecolors.h
-soincludedir = $(prefix)/include
-sodir=$(libdir)
-so_PROGRAMS = libpipecolors.so
-libpipecolors_so_SOURCES = libpipecolors.cpp
-libpipecolors_so_LDFLAGS = \
-	-shared \
-	-fPIC	\
-	-Wl,-soname,libpipecolors.so.0.1 \
-	-ltermcap
+lib_LTLIBRARIES = libpipecolors.la
+libpipecolors_la_SOURCES = libpipecolors.cpp
+libpipecolors_la_LIBADD = -ltermcap
+libpipecolors_la_CFLAGS = -fPIC -DPIC -pthread
+libpipecolors_la_LDFLAGS = -module \
+	-release ${PIPECOLORS_VERSION}
+
+include_HEADERS = pipecolors.h
