--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,9 @@
-pkgconfig_DATA = pipecolors.pc
-VERSION = 0.1.0
+man-hook:
+	gzip $(mandir)/man7/libpipecolors.7
+	gzip $(mandir)/man3/pcprintf.3
+
+
+pkgconfig_DATA = libpipecolors.pc
 AM_CXXFLAGS =  -std=c++11
 ACLOCAL_AMFLAGS = -I m4 -I config
 LIBTOOL_DEPS = @LIBTOOL_DEPS@
@@ -15,3 +19,19 @@ libpipecolors_la_LDFLAGS = -module \
 	-release ${PIPECOLORS_VERSION}
 
 include_HEADERS = pipecolors.h
+
+man_MANS = libpipecolors.7 pcprintf.3
+
+docdir = $(datadir)/doc/@PACKAGE@
+doc_DATA = README NEWS AUTHORS ChangeLog COPYING
+
+MAINTAINERCLEANFILES = \
+	aclocal.m4 \
+	config.h \
+	config.h.in \
+	config.h.in~ \
+	config.log \
+	stamp-h1 \
+	-rf config \
+	-rf m4 \
+	configure \
