Working on configure.ac

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,9 +11,14 @@ libpipecolors_la_LIBS = -lboost_regex
 libpipecolors_la_CFLAGS = -fPIC -DPIC -pthread
 
 if PC_REMOVE_INVALID
-AM_CPPFLAGS = -DPC_REMOVE_INVALID
+AM_CPPFLAGSINVALID = -DPC_REMOVE_INVALID
 endif
 
+if BUILD_WITH_BTREE
+AM_CPPFLAGSBTREE = -DBUILD_WITH_BTREE
+endif
+
+AM_CPPFLAGS = $(AM_CPPFLAGSBTREE) $(AM_CPPFLAGSINVALID)
 
 libpipecolors_la_LDFLAGS = -module \
 	-release ${PIPECOLORS_VERSION}
