Added option to compile with google btree instead of map

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,7 @@ AM_CPPFLAGSINVALID = -DPC_REMOVE_INVALID
 endif
 
 if BUILD_WITH_BTREE
-AM_CPPFLAGSBTREE = -DBUILD_WITH_BTREE
+AM_CPPFLAGSBTREE = -DBUILD_WITH_BTREE -std=c++11
 endif
 
 AM_CPPFLAGS = $(AM_CPPFLAGSBTREE) $(AM_CPPFLAGSINVALID)
