--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,7 @@ if BUILD_WITH_BTREE
 AM_CPPFLAGSBTREE = -DBUILD_WITH_BTREE -std=c++11
 endif
 
-AM_CPPFLAGS = $(AM_CPPFLAGSBTREE) $(AM_CPPFLAGSINVALID)
+AM_CPPFLAGS = $(AM_CPPFLAGSBTREE) $(AM_CPPFLAGSINVALID) -std=c++11
 
 libpipecolors_la_LDFLAGS = -module \
 	-release ${PIPECOLORS_VERSION}
