--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ compiler:
   - clang
 
 before_install:
+  - sudo apt-get update && sudo apt-get install -y pkg-config
   - ./autogen.sh
 
 branches:
