--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
   - gcc
 
 before_install:
-  - sudo apt-get update && sudo apt-get install -y pkg-config
+  - sudo apt-get update && sudo apt-get install -y pkg-config libtool automake
   - ./autogen.sh
 
 branches:
