removed make install

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
 before_install:
   - ./autogen.sh
 
-script: ./configure && make && make install
+script: ./configure && make
 
 branches:
   only:
